- Another global option was added named 'lazyWeave_cat`.  When set to TRUE,
  the output will be wrapped within cat inside the function.  cat will also 
  be added as an argument to the table and figure generating functions.  It 
  will not be added within the prose generating functions, since those should
  not be used in code blocks anyway.  This should not affect legacy code.

FEATURE CHANGES
- 'lazy.matrix' now prints column names in bold text.
- 'pvalue.QHS' is being removed and replaced with 'pvalString'.  'pvalue.QHS'
  was not exported, so this shouldn't have much effect on back compatibility.
  'pvalString' will be exported and will include options for different 
  styles of pvalue formatting.
- Additional arguments have been added to 'write.ctable' and 'write.univ' that
  control the formatting of p-values.

BUG FIXES
- Additional arguments are added to 'write.univ' to allow suppression of the 
  pvalue column.


=== 20 May 2014 ===
Some bug fixes have been applied, and the html counters have been moved out of the Global environtment into an 
environment stored in options()$htmlCounters


=== 10 Sept 2012 ===

The HTML output is now complete.  You can toggle between LaTeX and HTML output by using the command
> options(lazyReportFormat="latex") 
or 
> options(lazyReportFormat="html")

The default setting when the package is loaded is "latex"

The other addition to this update is the functions cattable, conttable, catconttable (all can be written to a 
report with write.ctable) and univ (write to a report with write.univ).  I got more comments on my summary tables
at UseR than I did on the package itself.  So now they're available to anyone who wants them.

=== 18 June 2012 ===

Following the UseR presentation, I've decided to change my plans for this package a little. 
Instead of uploading a second package (referred to as lazyHTML), I will add the HTML functionality 