@@ -2,7 +2,7 @@ Package: lazyWeave
 Type: Package
 Title: LaTeX Wrappers for R Users
 Version: 3.0.0
-Date: 2015-01-01
+Date: 2015-07-31
 Author: Benjamin Nutter
 Maintainer: Benjamin Nutter <nutter@battelle.org>
 Description: Provides the functionality to write LaTeX code from within R
