@@ -1,4 +1,4 @@
-#' @name is.significant
+#' @name is_significant
 #' 
 #' @title Test the significance of a p-value
 #' @description Test if a p-value is significant.  This is specifically designed
@@ -21,12 +21,12 @@
 #' 
 #' @examples
 #' \dontrun{
-#' is.significant(c(.10, .06, .051, .05, .049, .02, .01))
-#' is.significant(c("> .10", "< .05", "< 0.001"), alpha=.01)
+#' is_significant(c(.10, .06, .051, .05, .049, .02, .01))
+#' is_significant(c("> .10", "< .05", "< 0.001"), alpha=.01)
 #' }
 #' 
 
-is.significant <- function(pvalue, alpha=.05){
+is_significant <- function(pvalue, alpha=.05){
 
 #*** 1. Eliminate < and > characters.  These are produced by pvalString
   pvalue <- sub("<","",pvalue)
