@@ -41,7 +41,7 @@
 #' 
 #' @author Benjamin Nutter
 #' 
-#' @references Ligatures: \url{http://en.wikibooks.org/wiki/LaTeX/Formatting\#Ligatures}
+#' @references Ligatures: \url{https://en.wikibooks.org/wiki/LaTeX/Text_Formatting#Ligatures}
 #' 
 #' @examples
 #' 
@@ -68,8 +68,9 @@ function(docClass="article", packages=NULL,
   
   
   #*** Construct the comment with the function call
-  comment.char <- if (reportFormat == "latex") c("%%", "")
-  else if (reportFormat == "html") c("<!--", "-->")
+  comment.char <- if (reportFormat == "latex") {
+    if (getOption("lazyWeave_latexComments") == "latex") c("%%", "") else c("<!-- ", " -->")
+  }  else if (reportFormat == "html") c("<!--", "-->")
   
   fncall <- paste(comment.char[1], paste(deparse(match.call()), collapse=" "), comment.char[2], "\n")
   
