@@ -1,10 +1,10 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
 % Please edit documentation in R/is.significant.R
-\name{is.significant}
-\alias{is.significant}
+\name{is_significant}
+\alias{is_significant}
 \title{Test the significance of a p-value}
 \usage{
-is.significant(pvalue, alpha = 0.05)
+is_significant(pvalue, alpha = 0.05)
 }
 \arguments{
 \item{pvalue}{The p-value to be tested}
@@ -28,8 +28,8 @@ In instances where \code{pvalue} has a leading '<' or '>',
 }
 \examples{
 \dontrun{
-is.significant(c(.10, .06, .051, .05, .049, .02, .01))
-is.significant(c("> .10", "< .05", "< 0.001"), alpha=.01)
+is_significant(c(.10, .06, .051, .05, .049, .02, .01))
+is_significant(c("> .10", "< .05", "< 0.001"), alpha=.01)
 }
 }
 \author{
